# conf2env

./: .gitignore  example.py  pyproject.toml  readme.md
.github/workflows/: python-package.yml  python-publish.yml
conf2env/: common.py  convert.py  mk.py
conf2env/convert/: pydantic.py
tests/: conftest.py  test_convert.py  test_import.py
